--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,21 @@ a {
 }
 
 /* Header Part end here */
+
+/* Footer Part */
+
+footer {
+  background-color: #232f3e;
+}
+
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+footer .input-group-text {
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px 17px;
+}
+
+/* Footer Part end here */
