--- a/src/App.css
+++ b/src/App.css
@@ -485,20 +485,59 @@ footer .input-group-text {
   border-radius: 3px;
 }
 
-gr-12 {
+.gr-12 {
   width: 100%;
 }
 
-gr-6 {
+.gr-6 {
   width: 48%;
 }
 
-gr-4 {
+.gr-4 {
   width: 32%;
 }
 
-gr-3 {
-  width: 24;
+.gr-3 {
+  width: 24%;
 }
 
 /* Our Store ends here */
+
+/* Contact Page */
+
+.contact-inner-wrapper {
+  padding: 30px 20px;
+  border-radius: 15px;
+  background-color: white;
+  gap: 15px;
+}
+
+.contact-inner-wrapper > div {
+  width: 48%;
+}
+
+.contact-title {
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 35px;
+  text-align: left;
+}
+
+.contact-inner-wrapper form .form-control {
+  background-color: var(--color-f5f5f7);
+  border-radius: 10px;
+  border-color: transparent;
+  padding: 10px;
+}
+
+.contact-inner-wrapper ul {
+  list-style: none;
+}
+
+.contact-inner-wrapper address,
+.contact-inner-wrapper a,
+.contact-inner-wrapper p {
+  color: var(--color-777777);
+}
+
+/* Contact Page end here */
